# dotwork-server-bootstrapper

./: .flake8  .gitignore  README.md  build.bat  build.py  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml  manual-release.yml
core/: backup_manager.py  template_manager.py  variable_substitution.py
gui/: instance_manager.py  instance_wizard.py  main_window.py  result_widget.py  settings_dialog.py
models/: instance.py  result.py  template.py
templates/main/: server.properties  start.bat  template.yml
templates/main/plugins/: database-config.yml
utils/: config.py  logger.py
